--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -56,7 +56,6 @@
   font-weight: bold;
 }
 
-
 .nav_links_open {
   display: flex;
   flex-direction: column;
@@ -90,6 +89,10 @@
   font-size: 20px;
 }
 
+.nav_icon {
+  display: none;
+}
+
 /* Scroll Navbar */
 .nav_visible {
   transform: translateY(0);
@@ -101,6 +104,70 @@
   transition: transform 0.3s ease-in-out;
 }
 /* End Scroll navbar */
+
+/* css toggle nav */
+#checkbox {
+  display: none;
+}
+
+.toggle {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  transition-duration: 0.5s;
+}
+
+.bars {
+  width: 100%;
+  height: 4px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 4px;
+}
+
+#bar2 {
+  transition-duration: 0.8s;
+}
+
+#bar1,
+#bar2,
+#bar3 {
+  width: 90%;
+}
+
+#checkbox:checked + .toggle .bars {
+  position: absolute;
+  transition-duration: 0.5s;
+}
+
+#checkbox:checked + .toggle #bar2 {
+  transform: scaleX(0);
+  transition-duration: 0.5s;
+}
+
+#checkbox:checked + .toggle #bar1 {
+  width: 100%;
+  transform: rotate(45deg);
+  transition-duration: 0.5s;
+}
+
+#checkbox:checked + .toggle #bar3 {
+  width: 100%;
+  transform: rotate(-45deg);
+  transition-duration: 0.5s;
+}
+
+#checkbox:checked + .toggle {
+  transition-duration: 0.5s;
+  transform: rotate(180deg);
+}
+
+/* end toggle nav */
 
 @media screen and (max-width: 768px) {
   .nav {
