--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -16,8 +16,13 @@
 }
 
 .home_left_h1 {
-  font-size: 40px;
-  color: brown;
+  font-size: 50px;
+  background-image: linear-gradient(to bottom, #ffe940, #f6416c);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  filter: drop-shadow(12px 12px 7px rgba(167, 162, 164, 0.7));
+  text-align: ce;
 }
 
 .home_left_p {
@@ -47,6 +52,97 @@
   animation: moveUpDown 2.3s ease-in-out infinite alternate;
 }
 
+/* css home_why */
+.home_why {
+  display: flex;
+  padding: 0 10% 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  flex-direction: column;
+}
+
+.home_why_h2 {
+  background-image: linear-gradient(to bottom, #fff6b7, #f6416c);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  font-size: 42px;
+  filter: drop-shadow(12px 12px 7px rgba(167, 162, 164, 0.7));
+  text-align: center;
+}
+
+.home_why_box {
+  display: flex;
+  gap: 26px;
+  justify-content: space-between;
+}
+
+.home_why_box1 {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  padding: 10px 20px;
+  background-color: #fffaee;
+  backdrop-filter: blur(75px);
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 4px 4px 4px 1px rgba(3, 1, 1, 0.2);
+}
+
+.home_imgs {
+  width: 280px;
+  height: 280px;
+  overflow: hidden;
+}
+
+.home_why_box1_imgs {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.home_why_box1_h4 {
+  font-size: 25px;
+}
+
+.home_why_box1_p {
+  text-align: center;
+}
+
+.phone {
+  position: relative;
+  right: -28px;
+}
+
+.home_why_icons {
+  background-image: linear-gradient(to bottom, #ffe51f, #f6416c);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  font-size: 42px;
+  filter: drop-shadow(12px 12px 7px rgba(148, 145, 146, 0.7));
+  font-size: 120px;
+}
+
+.color {
+  background-image: linear-gradient(to bottom, #43cbff, #964eb1);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  filter: drop-shadow(12px 12px 7px rgba(47, 119, 185, 0.7));
+}
+
+.color2 {
+  background-image: linear-gradient(to bottom, #79f1a4, #0e5cad);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  filter: drop-shadow(12px 12px 7px rgba(86, 206, 206, 0.7));
+}
+
 @keyframes moveUpDown {
   0% {
     transform: translateY(30px);
@@ -56,8 +152,35 @@
   }
 }
 
+@media screen and (max-width: 1060px) {
+  .home_why_box1 {
+    width: 220px;
+  }
+
+  .home_imgs {
+    width: 200px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center !important;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .home_right {
     display: none;
+  }
+
+  .home_why_box {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .home_why_box1 {
+    width: 100%;
+  }
+
+  .home {
+    min-height: 100%;
   }
 }
