Done Fuction Create and Show

--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,7 @@
 
 body {
   font-family: "Roboto";
+  background-image: url("../src/assets/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
